--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "crypto-js": "^4.0.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
     "socket.io": "^2.3.0"
